# glusterfs-xlators

./: AUTHORS  INSTALL  Makefile.am  README  autogen.sh  configure.ac  glusterfs-posix2.spec.in
xlators/: Makefile.am
xlators/encryption/crypt/src/: crypt.c  data.c
xlators/experimental/: Makefile.am
xlators/experimental/posix2/common/src/: Makefile.am
xlators/experimental/posix2/ds/src/: Makefile.am
xlators/experimental/posix2/mds/src/: Makefile.am
